--- a/Client_Side/src/components/styling/styles.css
+++ b/Client_Side/src/components/styling/styles.css
@@ -181,12 +181,11 @@ h5{
     flex-direction: row;
     justify-content: space-between;
 }
-.team-details{
+.team-detail{
     display: flex;
     flex-direction: column;
     Justify-content: flex-start;
     align-items: flex-start;
-    padding: 3%;
 }
 .createBtnPoll{
     position: relative;
@@ -440,19 +439,24 @@ h5{
     margin-bottom: 1.5%;
     height: 42.5%;
 }
-.box-1{
-    position: relative;
-    border: 3px solid rgb(255, 0, 0,0.9);
-    height: 100%;
-    width:59%;
-    margin-right: 0.5%;
-}
-.box-3{
+.box1{
     position: relative;
     border: 3px solid rgba(225, 0, 255, 0.9);
     height: 100%;
+    width:59%;
+    margin-right: 0.5%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.box3{
+    position: relative;
+    border: 3px solid rgba(255, 0, 0, 0.9);
+    height: 100%;
     width:39%;
     margin-left: 0.5%;
+    align-items: center;
+    justify-content: center;
 }
 .wrap-box24{
     position: relative;
@@ -461,24 +465,32 @@ h5{
     margin: 1%;
     height: 51.5%;
 }
-.box-2{
+.box2{
     position: relative;
     border: 3px solid rgb(0, 217, 255,0.9);
     height: 100%;
     width:39%;
     margin-right: 0.5%;
     margin-bottom: 0.5%;
+    align-items: center;
+    justify-content: center;
 }
-.box-4{
+.box4{
     position: relative;
     border: 3px solid rgba(255, 255, 24, 0.9);
     height: 100%;
     width:59%;
     margin-left: 0.5%;
-    margin-bottom: 0.5%;
+    margin-bottom: 0.75%;
+    align-items: center;
+    justify-content: center;
+}
+.boxContent{
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 .team-des{
-    margin-top:2%;
     font-size: 1rem;
     color: rgb(255, 166, 0);
 }
@@ -835,8 +847,8 @@ input[type="radio"]{
     /* border: 0.4px solid rgb(255, 255, 255);
     border-bottom: none;
     border-right: none; */
-    color:rgb(0, 0, 0);
-    box-shadow: 7px 6px 2px rgba(146, 146, 146, 0.7);
+    /* color:rgb(0, 0, 0);
+    box-shadow: 7px 6px 2px rgba(146, 146, 146, 0.7); */
     transform: scale(1.01);
 }
 .pollResultHeader{
